<resources>
    <string name="app_name">Flash Cards</string>

    <!-- Textos da tela inicial -->
    <string name="ini_decricaoImagem">Logo do projeto</string>
    <string name="ini_btn_cadastrar">Cadastrar</string>
    <string name="ini_entrar">Logar</string>

    <!-- Textos da tela login -->
    <string name="log_decricaoImagem">Logo do projeto</string>
    <string name="log_btn_entrar">Entrar</string>
    <string name="log_btn_voltar">Voltar</string>
    <string name="log_edt_email">E-mail</string>
    <string name="log_edt_senha">Senha</string>
    <string name="log_txt_esqueci_senha">Esqueci a Senha</string>

    <string name="log_msg_emailnaopreechido">E-mail não informado!</string>
    <string name="log_msg_senhanaopreechido">Senha não informada!</string>

    <!-- Textos da tela cadastro -->
    <string name="cad_decricaoImagem">Logo do projeto</string>
    <string name="cad_btn_voltar">Voltar</string>
    <string name="cad_btn_cadastrar">Cadastrar</string>
    <string name="cad_edt_nome">Nome</string>
    <string name="cad_edt_email">E-mail</string>
    <string name="cad_edt_senha">Senha</string>

    <string name="cad_msg_nomenaopreechido">Nome não informado!</string>
    <string name="cad_msg_emailnaopreechido">E-mail não informado!</string>
    <string name="cad_msg_senhanaopreechido">Senha não informada!</string>
    <string name="cad_msg_sucesso">Cadastro realizado com sucesso!</string>

    <string name="cad_exc_senhafraca">Digite uma senha mais Forte!</string>
    <string name="cad_exc_emailinvalido">Por favor Digite um email valido!</string>
    <string name="cad_exc_usuexistente">Usuário já cadastrado!</string>
    <string name="cad_exc_erro">Erro ao cadastrar usuário!</string>


    <!-- Textos da tela esqueci senha -->
    <string name="eqs_decricaoImagem">Logo do projeto</string>
    <string name="eqs_edt_email">E-mail</string>
    <string name="eqs_btn_enviar_solicitacao">Recuperar Senha</string>
    <string name="eqs_btn_voltar">Voltar</string>

    <!-- Textos da tela Principal -->
    <string name="pri_btn_criar_baralho">Criar Baralho</string>
    <string name="pri_menu_deslogar">Deslogar</string>
    <string name="pri_menu_trocarsenha">Trocar Senha</string>

    <!-- Textos da tela Criar Baralho -->

    <string name="crb_edt_nome_baralho">Nome do Baralho</string>

    <string name="crb_tex_tipo">Tipo do Baralho</string>
    <string name="crb_tex_alertas">Alertas</string>
    <string name="crb_tex_hora">Hora</string>
    <string name="crb_tex_minutos">Minuto</string>

    <string name="crb_rdb_fc_comum">Flash Cards (FC) comum</string>
    <string name="crb_rdb_fcid">FC Idiomas</string>
    <string name="crb_rdb_fciding">FC Idiomas (ING)</string>
    <string name="crb_rdb_sem">Sem Lembretes ou Alarmes</string>
    <string name="crb_rdb_lem">Apenas Lembretes</string>
    <string name="crb_rdb_alm">Alarme</string>

    <string name="crb_btn_voltar">Voltar</string>
    <string name="crb_btn_criar">Criar</string>

    <string name="crb_toast_nomenaoinformado">Nome do baralho não Informado</string>

    <!-- Textos da tela informações de criação de deck com idoma ingles -->
    <string name="iii_txt_sugentao">Sugestão</string>
    <string name="iii_txt_texto">Como escolheste o programa de flashcards que para o idioma inglês.
    E como os textos com áudios nativos do programa, são etraídos da série O Pricipe Dragão.
        Sugerimos que assista a série dublada ou até legendada. Porque o programa irá
        eventualmente pedir para assitir um episódio da série, no idioma original (ingles) e sem
        legendas. </string>
    <string name="iii_btn_voltar">Voltar</string>
    <string name="iii_btn_avançar">Avançar</string>

    <!-- Textos da tela informações de criação de deck com idoma -->

    <string name="iid_btn_avançar">Avançar</string>
    <string name="iid_btn_titulo">O que são Grupos</string>
    <string name="iid_btn_texto">Grupos de cartas, é um texto fragmentado em várias frases menores.
                                O programa de estudo irá apresentar apenas um grupo de cartas por dia.
                                Após a sequência de estudo desse texto. As frases fragmentadas
                                serão adicionados no baralho.</string>

    <!-- Textos da tela principal baralho comum -->

    <string name="pbc_btn_iniciar">Iniciar Estudos</string>
    <string name="pbc_btn_add">Adicionar Carta</string>
    <string name="pbc_btn_voltar">Início</string>
    <string name="pbc_btn_config">Config.</string>
    <string name="pbc_btn_editar">Editar</string>
    <string name="pbc_txt_estastistica">Estatísticas:</string>
    <string name="pbc_txt_dias">Dias de Estudo:</string>
    <string name="pbc_txt_cartas">Cartas Estudadas:</string>

    <!-- Textos da tela primeira pergunta como está o seu tempo -->

    <string name="ppt_txt_comtempo">Estou com tempo de sobra!</string>
    <string name="ppt_txt_normal">Tenho tempo, mas não muito!</string>
    <string name="ppt_txt_ocupado">Tenho muita coisa para fazer!</string>
    <string name="ppt_txt_pergunta">Como está o seu tempo para estudar?</string>
    <string name="ppt_txt_escolha">Selecione uma figura!</string>

    <!-- Textos da tela Segunda pergunta como está o seu tempo -->

    <string name="spu_txt_animada">Me sinto bem disposto!</string>
    <string name="spu_txt_tranquilo">Estou tranquilo!</string>
    <string name="spu_txt_desnimado">Afff! Mais um dia!</string>
    <string name="spu_txt_pergunta">Estou com seu ânimo para estudar!</string>
    <string name="spu_txt_escolha">Selecione uma figura!</string>


    <!-- Textos da tela principal baralho idiomas -->

    <string name="pbi_btn_iniciar">Iniciar Estudos</string>
    <string name="pbi_btn_add_carta">ADD Carta</string>
    <string name="pbi_btn_add_grupo">ADD Grupo</string>
    <string name="pbi_btn_edt_grupo">EDT Conj.</string>
    <string name="pbi_btn_voltar">Início</string>
    <string name="pbi_btn_config">Config.</string>
    <string name="pbi_btn_editar">Editar</string>
    <string name="pbi_txt_estastistica">Estatísticas:</string>
    <string name="pbi_txt_dias">Dias de Estudo:</string>
    <string name="pbi_txt_textos">Textos Estudados:</string>
    <string name="pbi_txt_cartas">Cartas Estudadas:</string>
    <string name="pbi_txt_palavras">Palavras Únicas Visualizadas:</string>

    <!-- Textos da tela Editor de cartas fernte-->

    <string name="edc_txt_frente">FRENTE</string>
    <string name="edc_txt_anexar">Anexar</string>
    <string name="edc_btn_voltar">Voltar</string>
    <string name="edc_btn_anexar_audio">Áudio</string>
    <string name="edc_btn_anexar_vidio">Vídeo</string>
    <string name="edc_btn_anexar_imagem">Imagem</string>
    <string name="edc_btn_excluir">excluir</string>
    <string name="edc_btn_salvar">Avançar</string>
    <string name="edc_alerta_sem_preecimento">Não Foi adicionado nenhum item (textos, audios, imagens ou vídeos) na frente da carta</string>
    <string name="edc_alerta_grupo_sem_audio">Não Foi adicionado nenhum item (textos E audios) na frente da carta</string>


    <!-- Textos da tela Editor de carta verso -->

    <string name="edcv_txt_frente">FRENTE</string>
    <string name="edcv_txt_verso">VERSO</string>
    <string name="edcv_btn_voltar">Voltar</string>
    <string name="edcv_btn_anexar_audio">Áudio</string>
    <string name="edcv_btn_anexar_vidio">Vídeo</string>
    <string name="edcv_btn_anexar_imagem">Imagem</string>
    <string name="edcv_btn_salvar">Add</string>
    <string name="edcv_txt_anexar">Anexar</string>
    <string name="edcv_btn_salvarmais">+1</string>
    <string name="edcv_btn_excluir">excluir</string>

    <!-- Textos da tela Editor de baralhos-->

    <string name="edb_btn_excluir">excluir</string>
    <string name="edb_btn_voltar">Voltar</string>
    <string name="edb_tex_frente">Texto Frente</string>
    <string name="edb_tex_verso">Texto Verso</string>
    <string name="edb_dia_titulo">Excluir Baralho</string>
    <string name="edb_dia_mensage">Vecê quer excluir o baralho?</string>
    <string name="edb_dia_confirmaçao">Para garantir, você realmente quer excluir o baralho?</string>
    <string name="edb_dia_sim">SIM</string>
    <string name="edb_dia_nao">NÃO</string>
    <string name="edb_dia_editar">Editar</string>
    <string name="edb_dia_excluir">excluir carta</string>
    <string name="edb_dia_mensage2">Vecê quer excluir o baralho?</string>
    <string name="edb_dia_confirmaçao2">Para garantir, você realmente quer excluir o baralho?</string>
    <string name="edb_dia_titulo2">Editar ou Excluir</string>
    <string name="edb_dia_mensage3">Para garantir, você realmente quer excluir a carta?</string>
    <string name="edb_btn_conj">Conj</string>

    <!-- Textos da tela Conjuntos-->
    <string name="conj_btn_grupo">grupo</string>
    <string name="conj_btn_add">+</string>
    <string name="conj_voltar">Voltar</string>
    <string name="conj_btn_interroga">"?"</string>
    <string name="conj_txt_listaconjuto">Lista de Textos</string>
    <string name="conj_edt_nome">Nome do Conjunto</string>
    <string name="conj_toast">Nome do Conjunto não informado</string>

    <string name="conj_titul">"Conjuntos e Grupos</string>
    <string name="conj_info_p1">Conjuntos e grupos</string>

    <string name="conj_info_p2">São textos inteiros, com diversos paráragrafos. Cada pararáfo
    formará um grupo, e cada grupo é dividido em frases. Quando fores estudar, o programa irá mostrar
    apenas um grupo, mas os audios do CONJUNTO serão todos executados, até o atual grupo que
    está sendo estudado.</string>

    <string name="conj_info_p3">Após o termino do estudo de um grupo, todas as cartas contidas
    no grupo, farão parte de seu baralho</string>

    <string name="conj_info_p4">OBSERVAÇÃO: Após a criação do Conjunto, ele não poderá mais ser
        deletado e nem renomeado. O que pode fazer é desablitar a execução do conjunto </string>

    <!-- Textos da tela Grupo-->
    <string name="grupo_voltar">Voltar</string>
    <string name="grupo_habilitar">Ativo</string>
    <string name="grupo_desabilitar">Inativo</string>
    <string name="grupo_add_grupo">+ Grupo</string>

    <!-- Textos da tela edição de Grupo-->

    <string name="grupo_edicao_voltar">Voltar</string>
    <string name="grupo_edicao_texto_verso">Frase do Verso</string>
    <string name="grupo_edicao_texto_frente">Frase da Frente</string>
    <string name="grupo_edicao_add_carta">+ Carta</string>

    <!-- Textos da tela edição de carta de Grupo-->

    <string name="grupo_carta_edicao_voltar">Voltar</string>
    <string name="grupo_carta_edicao_texto_verso">Frase do Verso</string>
    <string name="grupo_carta_edicao_texto_frente">Frase da Frente</string>
    <string name="grupo_carta_edicao_add_carta">Salvar</string>
    <string name="grupo_carta_edicao_add_nanexar">Anexar áudio</string>
    <string name="grupo_carta_edicao_add_excluir">Excluir</string>
    <string name="grupo_carta_toast_semarquivo">Falta anexar um arquivo de áudio</string>
    <string name="grupo_carta_toast_semfrente">Falta digitar um texto para a frente do baralho</string>
    <string name="grupo_carta_toast_semaverso">Falta digitar um texto para o verso do baralho</string>


    <!-- Textos da apresentaçã de textos com áudio-->
    <string name="tata_Avançar">Avançar</string>

    <!-- Textos da apresentação das cartas-->
    <string name="tafc_mostrar">Mostrar</string>
    <string name="tafc_errei">Errei</string>
    <string name="tafc_dificil">difícil</string>
    <string name="tafc_facil">Fácil</string>
</resources>